<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="season"
            type="com.alexandernsalim.moviecatalogue.data.SeasonEntity" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_tv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cd_corner_radius"
        app:cardElevation="@dimen/cd_elevation"
        app:cardMaxElevation="@dimen/cd_max_elevation"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_500">

            <ImageView
                android:id="@+id/iv_season_poster"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:contentDescription="@string/poster"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_season"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/sm_padding"
                android:text="@{@string/season_format(season.seasonNumber)}"
                android:textSize="@dimen/sz_child_label"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_season_poster"
                tools:text="@string/season" />

            <TextView
                android:id="@+id/tv_episodes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/sm_padding"
                android:text="@{@plurals/episode(season.totalEpisodes, season.totalEpisodes)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_season"
                tools:text="@string/episodes" />

            <TextView
                android:id="@+id/tv_premiered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/sm_padding"
                android:text="@{@string/premiered_format(season.seasonNumber, season.premieredDate)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_episodes"
                tools:text="@string/premiered" />

            <TextView
                android:id="@+id/tv_season_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/sm_padding"
                android:text="@{season.overview}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_premiered"
                android:ellipsize="end"
                android:maxLines="5"
                tools:text="@string/sample_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
